create startup `PaymentSlip` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1704,7 +1704,32 @@
     "boilerplate.containers.Payroll.Payroll.salayElememt": "عنصر قالب مفردات المرتب",
     "boilerplate.containers.Payroll.Payroll.refranceElement": "عنصر استرشادى",
     "boilerplate.containers.Payroll.Payroll.relatedToWorkdays": "مرتبط بايام العمل",
-    
+
+    "boilerplate.containers.Payroll.Payroll.insured": "مؤمن عليه",
+    "boilerplate.containers.Payroll.Payroll.unInsured": "غير مؤمن عليه",
+    "boilerplate.containers.Payroll.Payroll.positive": "المرتبات الموجبة",
+    "boilerplate.containers.Payroll.Payroll.insurance": "التأمين",
+    "boilerplate.containers.Payroll.Payroll.salaryType": "نوع الراتب",
+    "boilerplate.containers.Payroll.Payroll.salaryValue": "قيمة الراتب",
+    "boilerplate.containers.Payroll.Payroll.showSICompanyShare": "عرض تأمينات صاحب العمل",
+    "boilerplate.containers.Payroll.Payroll.displayOriginalValues": "عرض القيم الأصلية",
+    "boilerplate.containers.Payroll.Payroll.displayReferenceElements": "عرض العناصر الاسترشادية",
+    "boilerplate.containers.Payroll.Payroll.currency": "العملة",
+    "boilerplate.containers.Payroll.Payroll.showStopped": "عرض الموقوفين",
+    "boilerplate.containers.Payroll.Payroll.negative": "المرتبات السالبة",
+    "boilerplate.containers.Payroll.Payroll.bank": "البنك",
+    "boilerplate.containers.Payroll.Payroll.company": "الشركة",
+    "boilerplate.containers.Payroll.Payroll.paymentSlip": "إيصال الدفع",
+    "boilerplate.containers.Payroll.Payroll.employeeInfo": "بيانات الموظف",
+    "boilerplate.containers.Payroll.Payroll.branch": "الفرع",
+    "boilerplate.containers.Payroll.Payroll.name": "الاسم",
+    "boilerplate.containers.Payroll.Payroll.organization": "الادارة",
+    "boilerplate.containers.Payroll.Payroll.code": "الكود",
+    "boilerplate.containers.Payroll.Payroll.job": "الوظيفة",
+    "boilerplate.containers.Payroll.Payroll.value": "القيمة",
+    "boilerplate.containers.Payroll.Payroll.total": "الإجمالي",
+    "boilerplate.containers.Payroll.Payroll.totalDeduction": "إجمالي الاستقطاعات",
+    "boilerplate.containers.Payroll.Payroll.net": "الصافي",
     
     "boilerplate.containers.Payroll.Payroll.inWeb": "يظهر فى تقارير الويب",
     "boilerplate.containers.Payroll.Payroll.calcIneachTemplate": "يحتسب فى كل قالب على حده",
