--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1652,6 +1652,31 @@
   "boilerplate.containers.Payroll.Payroll.detailed": "Detailed",
   "boilerplate.containers.Payroll.Payroll.groupByDepartment": "Group By Department",
 
+  "boilerplate.containers.Payroll.Payroll.insured": "Insured",
+  "boilerplate.containers.Payroll.Payroll.unInsured": "Uninsured",
+  "boilerplate.containers.Payroll.Payroll.positive": "Positive",
+  "boilerplate.containers.Payroll.Payroll.insurance": "Insurance",
+  "boilerplate.containers.Payroll.Payroll.salaryType": "Salary Type",
+  "boilerplate.containers.Payroll.Payroll.salaryValue": "Salary Value",
+  "boilerplate.containers.Payroll.Payroll.showSICompanyShare": "Show SI Company Share",
+  "boilerplate.containers.Payroll.Payroll.displayOriginalValues": "Display Original Values",
+  "boilerplate.containers.Payroll.Payroll.displayReferenceElements": "Display Reference Elements",
+  "boilerplate.containers.Payroll.Payroll.currency": "Currency",
+  "boilerplate.containers.Payroll.Payroll.showStopped": "Show Stopped",
+  "boilerplate.containers.Payroll.Payroll.negative": "Negative",
+  "boilerplate.containers.Payroll.Payroll.bank": "Bank",
+  "boilerplate.containers.Payroll.Payroll.company": "Company",
+  "boilerplate.containers.Payroll.Payroll.paymentSlip": "Payment Slip",
+  "boilerplate.containers.Payroll.Payroll.employeeInfo": "Employee Info",
+  "boilerplate.containers.Payroll.Payroll.branch": "Branch",
+  "boilerplate.containers.Payroll.Payroll.name": "Name",
+  "boilerplate.containers.Payroll.Payroll.organization": "Organization",
+  "boilerplate.containers.Payroll.Payroll.code": "Code",
+  "boilerplate.containers.Payroll.Payroll.job": "Job",
+  "boilerplate.containers.Payroll.Payroll.value": "Value",
+  "boilerplate.containers.Payroll.Payroll.total": "Total",
+  "boilerplate.containers.Payroll.Payroll.totalDeduction": "Total Deduction",
+  "boilerplate.containers.Payroll.Payroll.net": "Net",
   
   "boilerplate.containers.Payroll.Payroll.variable": "Variable",
   "boilerplate.containers.Payroll.Payroll.Percentage": "Percentage",
