finish `PaymentSlip` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1719,7 +1719,7 @@
     "boilerplate.containers.Payroll.Payroll.negative": "المرتبات السالبة",
     "boilerplate.containers.Payroll.Payroll.bank": "البنك",
     "boilerplate.containers.Payroll.Payroll.company": "الشركة",
-    "boilerplate.containers.Payroll.Payroll.paymentSlip": "إيصال الدفع",
+    "boilerplate.containers.Payroll.Payroll.paymentSlip": "شريط القبض",
     "boilerplate.containers.Payroll.Payroll.employeeInfo": "بيانات الموظف",
     "boilerplate.containers.Payroll.Payroll.branch": "الفرع",
     "boilerplate.containers.Payroll.Payroll.name": "الاسم",
@@ -1727,7 +1727,8 @@
     "boilerplate.containers.Payroll.Payroll.code": "الكود",
     "boilerplate.containers.Payroll.Payroll.job": "الوظيفة",
     "boilerplate.containers.Payroll.Payroll.value": "القيمة",
-    "boilerplate.containers.Payroll.Payroll.total": "الإجمالي",
+    "boilerplate.containers.Payroll.Payroll.originalValue": "القيمة الأصلية",
+    "boilerplate.containers.Payroll.Payroll.totalAllownace": "اجمالي المستحقات",
     "boilerplate.containers.Payroll.Payroll.totalDeduction": "إجمالي الاستقطاعات",
     "boilerplate.containers.Payroll.Payroll.net": "الصافي",
     
@@ -1821,8 +1822,9 @@
     "boilerplate.containers.Payroll.Payroll.section": "اسم القسم",
     "boilerplate.containers.Payroll.Payroll.employeeCode": "كود الموظف",
     "boilerplate.containers.Payroll.Payroll.employeeName": "اسم الموظف",
-    "boilerplate.containers.Payroll.Payroll.allowances": "اجمالى المستحق",
-    "boilerplate.containers.Payroll.Payroll.deductions": "اجمالي الاستقطاعات",
+    "boilerplate.containers.Payroll.Payroll.refranceElements": "عناصر استرشادية",
+    "boilerplate.containers.Payroll.Payroll.allowances": "المستحقات",
+    "boilerplate.containers.Payroll.Payroll.deductions": "الاستقطاعات",
     "boilerplate.containers.Payroll.Payroll.netSalary": "صافي المستحق",
     "boilerplate.containers.Payroll.Payroll.searchCriteria": "شروط البحث",
     "boilerplate.containers.Payroll.Payroll.template": "القالب",
@@ -1857,13 +1859,11 @@
     "boilerplate.containers.Payroll.Payroll.YouMustToChooseYearAndAtLeastOneElement":"يجب عليك اختيار السنة وعنصر واحد على الأقل",
     "boilerplate.containers.Payroll.Payroll.orgName":"الادارة",
     "boilerplate.containers.Payroll.Payroll.EmpCode":"كود الموظف",
-    "boilerplate.containers.Payroll.Payroll.employeeName":"اسم الموظف",
     "boilerplate.containers.Payroll.Payroll.payment":"الصرفية",
     "boilerplate.containers.Payroll.Payroll.element":"اسم العنصر",
     "boilerplate.containers.Payroll.Payroll.countVal":"العدد/القيمة",
     "boilerplate.containers.Payroll.Payroll.CalculatedValue":"القيمة المحسوبة",
     "boilerplate.containers.Payroll.Payroll.Month":"الشهر",
-    "boilerplate.containers.Payroll.Payroll.year":"السنة",
     "boilerplate.containers.Payroll.Payroll.Template":"القالب",
 
 
