--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1645,9 +1645,9 @@
   "boilerplate.containers.Payroll.Payroll.searchCriteria": "Search Criteria",
   "boilerplate.containers.Payroll.Payroll.template": "Template",
   "boilerplate.containers.Payroll.Payroll.cash": "Cash",
+  "boilerplate.containers.Payroll.Payroll.refranceElements": "Refrance Elements",
   "boilerplate.containers.Payroll.Payroll.bankOnly": "Bank Only",
   "boilerplate.containers.Payroll.Payroll.reportCriteria": "Report Criteria",
-  "boilerplate.containers.Payroll.Payroll.year": "Year",
   "boilerplate.containers.Payroll.Payroll.month": "Month",
   "boilerplate.containers.Payroll.Payroll.detailed": "Detailed",
   "boilerplate.containers.Payroll.Payroll.groupByDepartment": "Group By Department",
@@ -1674,7 +1674,8 @@
   "boilerplate.containers.Payroll.Payroll.code": "Code",
   "boilerplate.containers.Payroll.Payroll.job": "Job",
   "boilerplate.containers.Payroll.Payroll.value": "Value",
-  "boilerplate.containers.Payroll.Payroll.total": "Total",
+  "boilerplate.containers.Payroll.Payroll.originalValue": "Original Value",
+  "boilerplate.containers.Payroll.Payroll.totalAllownace": "Total Allownace",
   "boilerplate.containers.Payroll.Payroll.totalDeduction": "Total Deduction",
   "boilerplate.containers.Payroll.Payroll.net": "Net",
   
