--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1877,6 +1877,13 @@
     "boilerplate.containers.Payroll.Payroll.FromMonth":"من شهر",
     "boilerplate.containers.Payroll.Payroll.ToMonth":"الى شهر",
     "boilerplate.containers.Payroll.Payroll.Trx_Value":"القيمة",
+
+
+    "boilerplate.containers.Payroll.Payroll.Salary":"المرتب",
+    "boilerplate.containers.Payroll.Payroll.Other":"اخرى",
+    "boilerplate.containers.Payroll.Payroll.InsuranceEmpPart":"حصة العامل من التامين",
+    "boilerplate.containers.Payroll.Payroll.Tax":"ضرائب كسب العمل",
+    "boilerplate.containers.Payroll.Payroll.youMustToChooseYearAndMonth":"يجب عليك اختيار السنة والشهر",
     
     
   
