--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1673,11 +1673,18 @@
   "boilerplate.containers.Payroll.Payroll.organization": "Organization",
   "boilerplate.containers.Payroll.Payroll.code": "Code",
   "boilerplate.containers.Payroll.Payroll.job": "Job",
+  "boilerplate.containers.Payroll.Payroll.taxes": "Taxes",
   "boilerplate.containers.Payroll.Payroll.value": "Value",
   "boilerplate.containers.Payroll.Payroll.originalValue": "Original Value",
   "boilerplate.containers.Payroll.Payroll.totalAllownace": "Total Allownace",
   "boilerplate.containers.Payroll.Payroll.totalDeduction": "Total Deduction",
   "boilerplate.containers.Payroll.Payroll.net": "Net",
+  "boilerplate.containers.Payroll.Payroll.hiringDate": "Hiring Date",
+  "boilerplate.containers.Payroll.Payroll.yearly": "Yearly",
+  "boilerplate.containers.Payroll.Payroll.monthly": "Monthly",
+  "boilerplate.containers.Payroll.Payroll.monthYear": "Month/Year",
+  "boilerplate.containers.Payroll.Payroll.insuranceCompanyFixed": "Insurance Company Fixed",
+  "boilerplate.containers.Payroll.Payroll.insuranceEmployeeFixed": "Insurance Employee Fixed",
   
   "boilerplate.containers.Payroll.Payroll.variable": "Variable",
   "boilerplate.containers.Payroll.Payroll.Percentage": "Percentage",
