--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1820,6 +1820,10 @@
   "boilerplate.containers.Payroll.Payroll.InsuranceEmpPart":"Insurance Emp.Part",
   "boilerplate.containers.Payroll.Payroll.Tax":"Tax",
   "boilerplate.containers.Payroll.Payroll.youMustToChooseYearAndMonth":"You must to choose year and month",
+
+
+  "boilerplate.containers.Payroll.Payroll.posativeSalary":"Posative Salary",
+  "boilerplate.containers.Payroll.Payroll.NegativeSalary":"Negative Salary",
   
 
   "boilerplate.containers.Payroll.transportaion.ip":"Transportaion",  
