add `AnnualTaxReport` translation

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1732,6 +1732,7 @@
     "boilerplate.containers.Payroll.Payroll.totalDeduction": "إجمالي الاستقطاعات",
     "boilerplate.containers.Payroll.Payroll.enteredValues": "القيم المدخلة",
     "boilerplate.containers.Payroll.Payroll.net": "الصافي",
+    "boilerplate.containers.Payroll.Payroll.isStopped": "عرض الموقوفين",
     "boilerplate.containers.Payroll.Payroll.taxes": "الضرائب",
     "boilerplate.containers.Payroll.Payroll.hiringDate": "تاريخ التعيين",
     "boilerplate.containers.Payroll.Payroll.yearly": "سنوي",
@@ -1739,6 +1740,15 @@
     "boilerplate.containers.Payroll.Payroll.monthYear": "شهر/سنة",
     "boilerplate.containers.Payroll.Payroll.insuranceCompanyFixed": "حصة/ش من التامينات",
     "boilerplate.containers.Payroll.Payroll.insuranceEmployeeFixed": "حصة/م من التامينات",
+    "boilerplate.containers.Payroll.Payroll.taxable": "خاضع للضريبة",
+    "boilerplate.containers.Payroll.Payroll.consultant": "استشاري",
+    "boilerplate.containers.Payroll.Payroll.specialNeeds": "احتياجات خاصة",
+    "boilerplate.containers.Payroll.Payroll.oldTaxBool": "الوعاء الضريبى",
+    "boilerplate.containers.Payroll.Payroll.stopped": "موقوف",
+    "boilerplate.containers.Payroll.Payroll.notStopped": "غير موقوف",
+    "boilerplate.containers.Payroll.Payroll.oldTaxValue": "الضريبة المحسوبه",
+    "boilerplate.containers.Payroll.Payroll.newTaxBool": "الوعاء الضريبى المستحق",
+    "boilerplate.containers.Payroll.Payroll.newTaxValue": "الضريبة المستحقة",
     
     "boilerplate.containers.Payroll.Payroll.inWeb": "يظهر فى تقارير الويب",
     "boilerplate.containers.Payroll.Payroll.calcIneachTemplate": "يحتسب فى كل قالب على حده",
