--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1673,6 +1673,7 @@
   "boilerplate.containers.Payroll.Payroll.organization": "Organization",
   "boilerplate.containers.Payroll.Payroll.code": "Code",
   "boilerplate.containers.Payroll.Payroll.job": "Job",
+  "boilerplate.containers.Payroll.Payroll.isStopped": "Is Stopped",
   "boilerplate.containers.Payroll.Payroll.enteredValues": "Entered Values",
   "boilerplate.containers.Payroll.Payroll.taxes": "Taxes",
   "boilerplate.containers.Payroll.Payroll.value": "Value",
@@ -1686,6 +1687,15 @@
   "boilerplate.containers.Payroll.Payroll.monthYear": "Month/Year",
   "boilerplate.containers.Payroll.Payroll.insuranceCompanyFixed": "Insurance Company Fixed",
   "boilerplate.containers.Payroll.Payroll.insuranceEmployeeFixed": "Insurance Employee Fixed",
+  "boilerplate.containers.Payroll.Payroll.taxable": "Taxable",
+  "boilerplate.containers.Payroll.Payroll.stopped": "Stopped",
+  "boilerplate.containers.Payroll.Payroll.notStopped": "Not Stopped",
+  "boilerplate.containers.Payroll.Payroll.consultant": "Consultant",
+  "boilerplate.containers.Payroll.Payroll.specialNeeds": "Special Needs",
+  "boilerplate.containers.Payroll.Payroll.oldTaxBool": "Old Tax Boolean",
+  "boilerplate.containers.Payroll.Payroll.oldTaxValue": "Old Tax Value",
+  "boilerplate.containers.Payroll.Payroll.newTaxBool": "New Tax Boolean",
+  "boilerplate.containers.Payroll.Payroll.newTaxValue": "New Tax Value",
   
   "boilerplate.containers.Payroll.Payroll.variable": "Variable",
   "boilerplate.containers.Payroll.Payroll.Percentage": "Percentage",
