--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1839,6 +1839,10 @@
   "boilerplate.containers.Payroll.Payroll.NetSalary":"Net Salary",
   "boilerplate.containers.Payroll.Payroll.EmployeeShare":"Employee Share",
   "boilerplate.containers.Payroll.Payroll.YouMustToChooseYear":"You must to choose year",
+
+  "boilerplate.containers.Payroll.Payroll.YouMustToChooseYear_MonthAndTemplet":"You must to choose year , month and templet",
+  "boilerplate.containers.Payroll.Payroll.PrintSalary":"Print Salary",
+  "boilerplate.containers.Payroll.Payroll.PrintNamesOnly":"Print Names Only",
   
 
   "boilerplate.containers.Payroll.transportaion.ip":"Transportaion",  
