create `BankList` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1749,6 +1749,22 @@
     "boilerplate.containers.Payroll.Payroll.oldTaxValue": "الضريبة المحسوبه",
     "boilerplate.containers.Payroll.Payroll.newTaxBool": "الوعاء الضريبى المستحق",
     "boilerplate.containers.Payroll.Payroll.newTaxValue": "الضريبة المستحقة",
+    "boilerplate.containers.Payroll.Payroll.showOrganization": "عرض القسم",
+    "boilerplate.containers.Payroll.Payroll.exportToNewFile": "تصدير إلى ملف جديد",
+    "boilerplate.containers.Payroll.Payroll.updateExistingFile": "تحديث ملف موجود",
+    "boilerplate.containers.Payroll.Payroll.exportTemplate": "تصدير القالب",
+    "boilerplate.containers.Payroll.Payroll.account": "الحساب",
+    "boilerplate.containers.Payroll.Payroll.exportDetails": "تفاصيل التصدير",
+    "boilerplate.containers.Payroll.Payroll.fileExtensionShouldBeExcel": "يجب أن يكون امتداد الملف اكسيل",
+    "boilerplate.containers.Payroll.Payroll.upload": "تحميل",
+    "boilerplate.containers.Payroll.Payroll.fileIsEmpty": "الملف فارغ",
+    "boilerplate.containers.Payroll.Payroll.fileSizeShouldBeLessThan10MB": "يجب أن يكون حجم الملف أقل من 10 ميغابايت",
+    "boilerplate.containers.Payroll.Payroll.dataFromLineNumber": "البيانات من رقم الصف",
+    "boilerplate.containers.Payroll.Payroll.iban": "IBAN",
+    "boilerplate.containers.Payroll.Payroll.swift": "SWIFT",
+    "boilerplate.containers.Payroll.Payroll.export": "تصدير",
+    "boilerplate.containers.Payroll.Payroll.bankNumber": "رقم البنك",
+    "boilerplate.containers.Payroll.Payroll.bankName": "اسم البنك",
     
     "boilerplate.containers.Payroll.Payroll.inWeb": "يظهر فى تقارير الويب",
     "boilerplate.containers.Payroll.Payroll.calcIneachTemplate": "يحتسب فى كل قالب على حده",
