--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1696,6 +1696,22 @@
   "boilerplate.containers.Payroll.Payroll.oldTaxValue": "Old Tax Value",
   "boilerplate.containers.Payroll.Payroll.newTaxBool": "New Tax Boolean",
   "boilerplate.containers.Payroll.Payroll.newTaxValue": "New Tax Value",
+  "boilerplate.containers.Payroll.Payroll.showOrganization": "Show Department",
+  "boilerplate.containers.Payroll.Payroll.exportToNewFile": "Export To New File",
+  "boilerplate.containers.Payroll.Payroll.updateExistingFile": "Update Existing File",
+  "boilerplate.containers.Payroll.Payroll.exportTemplate": "Export Template",
+  "boilerplate.containers.Payroll.Payroll.account": "Account",
+  "boilerplate.containers.Payroll.Payroll.exportDetails": "Export Details",
+  "boilerplate.containers.Payroll.Payroll.fileExtensionShouldBeExcel": "File extension should be Excel",
+  "boilerplate.containers.Payroll.Payroll.upload": "Upload",
+  "boilerplate.containers.Payroll.Payroll.fileIsEmpty": "File is empty",
+  "boilerplate.containers.Payroll.Payroll.fileSizeShouldBeLessThan10MB": "File size should be less than 10MB",
+  "boilerplate.containers.Payroll.Payroll.dataFromLineNumber": "Data from line number",
+  "boilerplate.containers.Payroll.Payroll.iban": "IBAN",
+  "boilerplate.containers.Payroll.Payroll.swift": "SWIFT",
+  "boilerplate.containers.Payroll.Payroll.export": "Export",
+  "boilerplate.containers.Payroll.Payroll.bankNumber": "Bank Number",
+  "boilerplate.containers.Payroll.Payroll.bankName": "Bank Name",
   
   "boilerplate.containers.Payroll.Payroll.variable": "Variable",
   "boilerplate.containers.Payroll.Payroll.Percentage": "Percentage",
