improve `EmployeeSalary` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2011,6 +2011,20 @@
   "boilerplate.containers.Payroll.Employee.personal.jobname": " الوظيفة",
   "boilerplate.containers.Payroll.Employee.personal.isinsured": "مؤمن عليه",
 
+  "boilerplate.containers.Payroll.Employee.salary.chooseEmp": "اختيار موظف",
+  "boilerplate.containers.Payroll.Employee.salary.salaryStructure": "نموذج الراتب",
+  "boilerplate.containers.Payroll.Employee.salary.isBnkTransfer": "تحويل المرتب للبنك",
+  "boilerplate.containers.Payroll.Employee.salary.taxable": "خاضع للضريبة",
+  "boilerplate.containers.Payroll.Employee.salary.consultant": "استشاري",
+  "boilerplate.containers.Payroll.Employee.salary.isHours": "المرتب يعتمد علي ساعات العمل",
+  "boilerplate.containers.Payroll.Employee.salary.hourPrice": "قيمة الساعة",
+  "boilerplate.containers.Payroll.Employee.salary.isNotApplyAttRule": "لا يطبق عليه قواعد الحضور و الانصراف",
+  "boilerplate.containers.Payroll.Employee.salary.isMoneyOvertime": "حساب الوقت الاضافي برصيد اجازات",
+  "boilerplate.containers.Payroll.Employee.salary.isVacationOvertime": "حساب الوقت الاضافي بمقابل مادي",
+  "boilerplate.containers.Payroll.Employee.salary.hasTransfereAllowance": "حساب بدل انتقال",
+  "boilerplate.containers.Payroll.Employee.salary.hasMonthlyBouns": "حافز شهري",
+  "boilerplate.containers.Payroll.Employee.salary.incentiveFrom": "حوافز من",
+
   "boilerplate.containers.Payroll.Employee.personal.eRPCode": "الرقم الدفترى",
   "boilerplate.containers.Payroll.Employee.personal.machineCode": "الرقم المرجعى",
   "boilerplate.containers.Payroll.Employee.personal.arname": "الاسم يالعربية",
