--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -984,7 +984,6 @@
   "boilerplate.containers.Payroll.company": "Company",
   "boilerplate.containers.Payroll.december": "December",
   "boilerplate.containers.Payroll.employees": "View Employees",
-  "boilerplate.containers.Payroll.company": "Company",
 
   "boilerplate.containers.Payroll.VacationName": "Vacation",
   "boilerplate.containers.Payroll.Actions": "Actions",
@@ -1975,6 +1974,20 @@
   "boilerplate.containers.Payroll.Employee.personal.isSpecialNeeds": "Is SpecialNeeds",
   "boilerplate.containers.Payroll.Employee.personal.upload": "upload",
   "boilerplate.containers.Payroll.Employee.personal.controlParameter": "Roles Template",
+
+  "boilerplate.containers.Payroll.Employee.salary.chooseEmp": "Select Employee",
+  "boilerplate.containers.Payroll.Employee.salary.salaryStructure": "Salary Structure",
+  "boilerplate.containers.Payroll.Employee.salary.isBnkTransfer": "Bank Transfer",
+  "boilerplate.containers.Payroll.Employee.salary.taxable": "Taxable",
+  "boilerplate.containers.Payroll.Employee.salary.consultant": "Consultant",
+  "boilerplate.containers.Payroll.Employee.salary.isHours": "Salary On Working Hours",
+  "boilerplate.containers.Payroll.Employee.salary.hourPrice": "Hourly Value",
+  "boilerplate.containers.Payroll.Employee.salary.isNotApplyAttRule": "Not Apply Attendance Rules",
+  "boilerplate.containers.Payroll.Employee.salary.isMoneyOvertime": "Post Overtime To Payroll",
+  "boilerplate.containers.Payroll.Employee.salary.isVacationOvertime": "Post Overtime To Accurate Leave",
+  "boilerplate.containers.Payroll.Employee.salary.hasTransfereAllowance": "Transfer Allowance",
+  "boilerplate.containers.Payroll.Employee.salary.hasMonthlyBouns": "Apply Incentive",
+  "boilerplate.containers.Payroll.Employee.salary.incentiveFrom": "Incentive From",
 
   "boilerplate.containers.Payroll.Employee.car.carModel": "Car Model",
   "boilerplate.containers.Payroll.Employee.car.manufactureYear": "Manufacture Year",
