improve `Personal` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1987,7 +1987,7 @@
   "boilerplate.containers.Payroll.Employee.personal.isHR": "هل اتش ار",
   "boilerplate.containers.Payroll.Employee.personal.branches": "الفروع",
   "boilerplate.containers.Payroll.Employee.personal.status": "الحالة",
-  "boilerplate.containers.Payroll.Employee.personal.workEmail": "البريد الإلكتروني العمل",
+  "boilerplate.containers.Payroll.Employee.personal.workEmail": "البريد الإلكتروني للعمل",
   "boilerplate.containers.Payroll.Employee.personal.taxableStuff": "الاشياء الخاضعة للضريبة",
   "boilerplate.containers.Payroll.Employee.personal.insuranceSalary": "المرتب التاميني",
   "boilerplate.containers.Payroll.Employee.personal.basicSalary": "المرتب الاساسي",
@@ -2029,6 +2029,7 @@
   "boilerplate.containers.Payroll.Employee.personal.eRPCode": "الرقم الدفترى",
   "boilerplate.containers.Payroll.Employee.personal.machineCode": "الرقم المرجعى",
   "boilerplate.containers.Payroll.Employee.personal.arname": "الاسم يالعربية",
+  "boilerplate.containers.Payroll.Employee.salary.identitynumberShouldBe14": "يجب أن يكون رقم الهوية 14 حرف",
   "boilerplate.containers.Payroll.Employee.personal.enname": "الاسم بالانجليزية",
   "boilerplate.containers.Payroll.Employee.personal.identityType": "نوع الهوية",
   "boilerplate.containers.Payroll.Employee.personal.identityIssuingAuth": "تابع لسجل مدنى",
