finish `EmployeeBank` page

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1046,6 +1046,9 @@
   "boilerplate.containers.Payroll.Setting.formTypeName": "Form Type Name",
   "boilerplate.containers.Payroll.Setting.update": "Update",
   "boilerplate.containers.Payroll.Setting.add": "Add",
+  "boilerplate.containers.Payroll.Setting.department": "Department",
+  "boilerplate.containers.Payroll.Setting.employee": "Employee",
+  "boilerplate.containers.Payroll.Setting.printForm": "Print Form",
   "boilerplate.containers.Payroll.Setting.view": "View",
   "boilerplate.containers.Payroll.Setting.print": "Print",
   "boilerplate.containers.Payroll.Setting.favorites": "Favorites",
@@ -2071,6 +2074,11 @@
   "boilerplate.containers.Payroll.Employee.bankEmployeeCode": "Bank Employee Code",
   "boilerplate.containers.Payroll.Employee.onceYouSubmitItsMeanYouHaveAgreedWithOur": "Once you submit, it means you have agreed with our",
   "boilerplate.containers.Payroll.Employee.termsAndCondition": "Terms and Conditions",
+  "boilerplate.containers.Payroll.Employee.templateInfo": "Template Info",
+  "boilerplate.containers.Payroll.Employee.addOrChangeTemplate": "Add Or Change Template",
+  "boilerplate.containers.Payroll.Employee.templateName": "Template Name",
+  "boilerplate.containers.Payroll.Employee.currency": "Currency",
+  "boilerplate.containers.Payroll.Employee.noTemplateAdded": "No Templates Added",
 
   "boilerplate.containers.Payroll.MainData.codes.id": "Id",
   "boilerplate.containers.Payroll.MainData.codes.preview": "Preview",
