--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1069,6 +1069,9 @@
   "boilerplate.containers.Payroll.Setting.penalty": "عقوبة",
   "boilerplate.containers.Payroll.Setting.overTime": "وقت إضافي",
   "boilerplate.containers.Payroll.Setting.reward": "مكافأة",
+  "boilerplate.containers.Payroll.Setting.department": "القسم",
+  "boilerplate.containers.Payroll.Setting.employee": "الموظف",
+  "boilerplate.containers.Payroll.Setting.printForm": "نموذج الطباعة",
   "boilerplate.containers.Payroll.Setting.organization": "المنظمة",
   "boilerplate.containers.Payroll.Setting.update": "تعديل",
   "boilerplate.containers.Payroll.Setting.addDecorator": "إضافة ديكوريتور",
@@ -2133,6 +2136,11 @@
   "boilerplate.containers.Payroll.Employee.bankEmployeeCode": "كود الموظف",
   "boilerplate.containers.Payroll.Employee.onceYouSubmitItsMeanYouHaveAgreedWithOur": "عند تقديمك، يعني أنك قد وافقت على شروطنا",
   "boilerplate.containers.Payroll.Employee.termsAndCondition": "الشروط والأحكام",
+  "boilerplate.containers.Payroll.Employee.templateInfo": "معلومات القالب",
+  "boilerplate.containers.Payroll.Employee.addOrChangeTemplate": "إضافة أو تغيير القالب",
+  "boilerplate.containers.Payroll.Employee.templateName": "اسم القالب",
+  "boilerplate.containers.Payroll.Employee.currency": "العملة",
+  "boilerplate.containers.Payroll.Employee.noTemplateAdded": "لم يتم إضافة قوالب",
 
   "boilerplate.containers.Payroll.MainData.codes.id": "كود",
   "boilerplate.containers.Payroll.MainData.codes.preview": "معاينة",
